# pretraining-experiments

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: inference.yaml  prepare_ids.yaml  train.yaml
configs/data/: kobza.yaml  kobza_local.yaml  malyuk.yaml
configs/data_processing/: default.yaml  test.yaml
configs/experiment/: none.yaml  tensorboard.yaml
configs/experiment_tracking/: wandb.yaml
configs/hydra/: default.yaml
configs/model/: gemma_3_270mb.yaml
configs/pretraining/: default.yaml  test.yaml
configs/tokenizer/: auto.yaml  gemma_3.yaml  tereshchenkoblue.yaml
configs/training/: default.yaml  test.yaml
notebooks/: 001-load-model-and-tokenizer.ipynb
scripts/python/: 000-load-subsample.py  001-prepare-ids-to-freeze.py  002-gemma-pretraining.py  003-inference.py
src/: __init__.py
src/data_processing/: __init__.py  dataset_processor.py
src/experiment_tracking/: __init__.py  base.py  empty.py  tensorboard.py  types.py  wandb.py
src/helper/aws/: sm_runner.py  utils.py
src/helper/display/: __init__.py
src/helper/logging/: __init__.py
src/metrics/: __init__.py  compute_metrics.py  utils.py
src/trainer/: no_decay_embeddings_trainer.py  utils.py
